# ceph-fixture

./: Makefile.am  README  README.md  autogen.sh  ceph  ceph.spec  ceph.spec.in  configure.ac
debian/: ceph.install  changelog  control  rules
